<resources>
    <string name="app_name">Clothing Suggester</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="demo_temperature">11</string>
    <string name="celsius">°C</string>
    <string name="fake_date">10 Apr 2023</string>
    <string name="quote_1">“IF THERE IS NO STRUGGLE, THERE IS NO PROGRESS”</string>
    <string name="pick_another">Pick Another</string>
    <string name="view_categories">View Categories</string>
    <string name="overcast">Overcast</string>
    <string name="winter">Winter</string>
    <string name="outfits">Outfits</string>
    <string name="summer">Summer</string>
    <string name="all">ALL</string>
    <string name="add_more">Add More</string>
    <string name="sohag">Sohag</string>
    <string name="work_harder_to_make_the_wardrobe_larger">Work Harder To Make\nThe Wardrobe Larger</string>
</resources>