<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/custom_white"
        tools:context=".ui.HomeFragment">


        <androidx.cardview.widget.CardView android:id="@+id/card_view_forecast"
            android:layout_width="match_parent"
            android:layout_height="@dimen/large_size_160"
            android:layout_marginTop="@dimen/large_size_32"
            android:layout_marginEnd="@dimen/medium_size_16"
            app:cardCornerRadius="@dimen/medium_size_16"
            android:layout_marginStart="@dimen/medium_size_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:background="@color/black"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/forecast_background_svg" />

                <TextView android:id="@+id/text_view_temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/demo_temperature"
                    android:textColor="@color/custom_white"
                    android:textSize="@dimen/font_size_56"
                    android:fontFamily="@font/roboto"
                    android:layout_marginTop="@dimen/large_size_34"
                    android:layout_marginStart="@dimen/medium_size_16"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView android:id="@+id/text_view_celsius"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/celsius"
                    android:textColor="@color/custom_white"
                    android:textSize="@dimen/font_size_24"
                    android:layout_marginTop="@dimen/large_size_28"
                    app:layout_constraintStart_toEndOf="@id/text_view_temperature"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.imageview.ShapeableImageView android:id="@+id/image_view_forecast"
                    android:layout_width="66dp"
                    android:layout_height="66dp"
                    android:layout_marginTop="@dimen/large_size_30"
                    android:layout_marginEnd="@dimen/medium_size_16"
                    tools:src="@color/bloody"
                    app:shapeAppearanceOverlay="@style/roundedImageView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView android:id="@+id/text_view_city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/medium_size_16"
                    android:layout_marginBottom="@dimen/medium_size_12"
                    android:fontFamily="@font/roboto"
                    tools:text="@string/sohag"
                    android:textColor="@color/bloody"
                    android:textSize="@dimen/font_size_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView android:id="@+id/text_view_weather"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/medium_size_12"
                    android:fontFamily="@font/roboto"
                    tools:text="@string/overcast"
                    android:layout_marginEnd="@dimen/medium_size_16"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/font_size_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView android:id="@+id/text_view_quote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/quote_1"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:fontFamily="@font/roboto_medium"
            android:textSize="@dimen/font_size_16"
            android:layout_marginTop="@dimen/large_size_80"
            android:layout_marginStart="@dimen/large_size_30"
            android:layout_marginEnd="@dimen/large_size_30"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_view_forecast" />

        <View android:id="@+id/view_outfit_shadow"
            android:layout_width="@dimen/large_size_200"
            android:layout_height="@dimen/large_size_300"
            android:background="@color/semi_gray"
            android:layout_marginBottom="@dimen/medium_size_16"
            android:layout_marginEnd="@dimen/medium_size_16"
            app:layout_constraintBottom_toBottomOf="@+id/image_view_outfit"
            app:layout_constraintEnd_toEndOf="@+id/image_view_outfit" />

        <ImageView android:id="@+id/image_view_outfit"
            android:layout_width="@dimen/large_size_200"
            android:layout_height="@dimen/large_size_300"
            android:scaleType="centerCrop"
            android:src="@drawable/outfit_1"
            android:layout_marginTop="@dimen/large_size_86"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_quote" />

        <com.google.android.material.button.MaterialButton android:id="@+id/button_pick_another"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_size_40"
            android:fontFamily="@font/roboto_medium"
            android:textAllCaps="false"
            android:textColor="@color/custom_white"
            android:paddingHorizontal="@dimen/large_size_32"
            android:paddingVertical="@dimen/medium_size_16"
            android:text="@string/pick_another"
            android:textSize="@dimen/font_size_14"
            app:cornerRadius="@dimen/medium_size_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_view_outfit" />

        <com.google.android.material.button.MaterialButton
            android:textColor="@color/custom_white"
            android:id="@+id/button_view_categories"
            android:layout_width="@dimen/large_size_328"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_size_40"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/roboto_medium"
            android:paddingVertical="@dimen/medium_size_18"
            android:text="@string/view_categories"
            android:textAllCaps="false"
            android:textSize="@dimen/font_size_14"
            app:cornerRadius="@dimen/medium_size_16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="@dimen/large_size_36"
            app:layout_constraintTop_toBottomOf="@+id/button_pick_another" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>


